# cocotola-1.26

./: .aqua-policy.yaml  .bazelignore  .bazelrc  .gitignore  .gitleaks.toml  .golangci.yml  .kics.yml  .markdownlintignore  .misspell-ignore  .pre-commit-config.yaml  .registry.yaml  .yamllint.yml  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  aqua-checksums.json  aqua.yaml  compose.common-firestore.yml  compose.common-jaeger.yml  compose.common-lgtm.yml  compose.common-mysql.yml  compose.common-postgres.yml  compose.local.mysql-jaeger.yml  compose.local.mysql-lgtm.yml  compose.local.postgres-firestore-jaeger.yml  compose.local.postgres-jaeger.yml  compose.local.postgres-lgtm.yml  compose.test.yml  go.mod  go.work  go.work.sum  package.json  pnpm-lock.yaml
cocotola-app/: BUILD.bazel  authz_adapter.go  go.mod  go.sum  main.go
cocotola-app/config/: BUILD.bazel  config.go  config.yml
cocotola-auth/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-auth/api/: BUILD.bazel  doc.go  oapi-codegen.yaml  openapi-bundled.yaml  openapi.yaml  types.gen.go
cocotola-auth/api/paths/: auth.yaml  authz.yaml  group.yaml  health.yaml  organization.yaml  space.yaml  user-setting.yaml  user.yaml
cocotola-auth/api/schemas/: auth.yaml  authz.yaml  common.yaml  group.yaml  health.yaml  organization.yaml  space.yaml  user-setting.yaml  user.yaml
cocotola-auth/config/: BUILD.bazel  config.go  config.yml  doc.go
cocotola-auth/controller/: BUILD.bazel  context.go  cookie.go  cookie_s_test.go  doc.go  error.go
cocotola-auth/controller/handler/: BUILD.bazel  doc.go  handler_test.go  helper.go  router.go
cocotola-auth/domain/: BUILD.bazel  access_token.go  access_token_s_test.go  active_group_list.go  active_group_list_s_test.go  active_list_base.go  active_user_list.go  active_user_list_s_test.go  app_user.go  app_user_s_test.go  authorization.go  authorization_s_test.go  const.go  doc.go  error.go  event.go  group.go  group_child_groups.go  group_child_groups_s_test.go  group_hierarchy.go  group_hierarchy_s_test.go  group_s_test.go  group_users.go  group_users_s_test.go  guest.go  ids.go  int_id_set.go  organization.go  organization_s_test.go  password_hasher.go  password_hasher_s_test.go  refresh_token.go  refresh_token_s_test.go  session_token.go  session_token_s_test.go  space.go  space_s_test.go  space_type.go  space_type_s_test.go  token_generator.go  (+8 more)
cocotola-auth/gateway/: BUILD.bazel  access_token_repository.go  access_token_whitelist_repository.go  active_group_list_repository.go  active_group_list_repository_m_test.go  active_list_repository.go  active_user_list_repository.go  active_user_list_repository_m_test.go  app_user_provider_repository.go  app_user_repository.go  app_user_repository_m_test.go  auth.go  auth_test.go  bcrypt_hasher.go  casbin_authorization_checker.go  columns.go  doc.go  event_bus.go  event_bus_s_test.go  export_test.go  fixtures_test.go  gateway_m_test.go  gorm_helper.go  group_hierarchy_repository.go  group_hierarchy_repository_m_test.go  group_repository.go  group_repository_m_test.go  group_users_repository.go  group_users_repository_m_test.go  guest_authenticator.go  health_repository.go  helper_m_test.go  opaque_token_repository.go  organization_repository.go  organization_repository_m_test.go  rbac_repository.go  rbac_repository_m_test.go  refresh_token_repository.go  refresh_token_whitelist_repository.go  repository_s_test.go  (+10 more)
cocotola-auth/initialize/: BUILD.bazel  initialize.go
cocotola-auth/usecase/: BUILD.bazel  doc.go
cocotola-empty/: BUILD.bazel  go.mod  go.sum  main.go
cocotola-init/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-init/config/: BUILD.bazel  config.go  config.yml
cocotola-init/initialize/: BUILD.bazel  initializer.go
cocotola-init/seed/: BUILD.bazel  client.go  client_s_test.go  doc.go  loader.go  loader_s_test.go  mocks_test.go  types.go  workbook_seeder.go  workbook_seeder_s_test.go
cocotola-lib/controller/: BUILD.bazel  config.go  context.go  cors.go  cors_s_test.go  doc.go  metrics_server.go  metrics_server_test.go  stringutil.go  stringutil_test.go  web_server.go  web_server_s_test.go
cocotola-lib/domain/: BUILD.bazel  const.go  validator.go
cocotola-lib/gateway/: BUILD.bazel  db.go  db_mysql.go  db_postgres.go  db_postgres_s_test.go  db_s_test.go  db_test.go  doc.go  export_test.go  http_client.go  http_client_test.go  log.go  log_otlp.go  log_test.go  log_uptrace.go  signal_watch.go  trace.go  trace_google.go  trace_none.go  trace_otlp.go  trace_s_test.go  trace_stdout.go  trace_uptrace.go
cocotola-lib/i18n/: BUILD.bazel  doc.go  language.go  language_s_test.go
cocotola-lib/process/: BUILD.bazel  doc.go  multiprocess.go  multiprocess_test.go
cocotola-lib/telemetry/: BUILD.bazel  doc.go  telemetry.go  telemetry_test.go
cocotola-question/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-question/api/: BUILD.bazel  doc.go  oapi-codegen.yaml  openapi-bundled.yaml  openapi.yaml  types.gen.go
cocotola-question/config/: BUILD.bazel  config.go  config.yml  config_s_test.go  doc.go
cocotola-question/controller/: BUILD.bazel  context.go  doc.go  error.go
cocotola-question/domain/: BUILD.bazel  active_question_list.go  const.go  doc.go  error.go  owned_workbook_list.go  owned_workbook_list_s_test.go  rbac.go  rbac_s_test.go
cocotola-question/gateway/: BUILD.bazel  active_question_list_repository.go  active_question_list_repository_m_test.go  auth_client.go  auth_client_s_test.go  doc.go  firestore_client.go  health_repository.go  owned_workbook_list_repository.go  owned_workbook_list_repository_m_test.go  question_repository.go  question_repository_m_test.go  reference_repository.go  study_record_repository.go  study_record_repository_m_test.go  versioned_save.go  workbook_repository.go
cocotola-question/initialize/: BUILD.bazel  initialize.go
cocotola-question/usecase/: BUILD.bazel  doc.go
hello-world/: .mockery.yaml  BUILD.bazel  go.mod  main.go  main_test.go
third-party-library/: .mockery.yaml  BUILD.bazel  go.mod  main.go
(+529 files in other folders)
