# rules_go
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

# gazelle
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "gazelle")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "com_github_casbin_casbin_v3",
    "com_github_micahparks_keyfunc_v3",
    "com_github_casbin_gorm_adapter_v3",
    "com_github_gin_contrib_cors",
    "com_github_gin_gonic_gin",
    "com_github_go_playground_validator_v10",
    "com_github_go_sql_driver_mysql",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace",
    "com_github_mocoarow_cocotola_1_26_cocotola_auth",
    "com_github_mocoarow_cocotola_1_26_cocotola_lib",
    "com_github_mocoarow_slogotel",
    "com_github_ohler55_ojg",
    "com_github_orandin_slog_gorm",
    "com_github_prometheus_client_golang",
    "com_github_samber_slog_gin",
    "com_github_stretchr_testify",
    "com_google_cloud_go_firestore",
    "in_yaml_go_yaml_v4",
    "io_gorm_driver_mysql",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_gorm_plugin_opentelemetry",
    "io_opentelemetry_go_contrib_bridges_otelslog",
    "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
    "io_opentelemetry_go_contrib_processors_baggagecopy",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploghttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_log",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_x_crypto",
    "org_golang_x_sync",
)

# pkg
bazel_dep(name = "rules_pkg", version = "1.2.0")

# oci
bazel_dep(name = "rules_oci", version = "2.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static_debian12",
    digest = "sha256:2b7c93f6d6648c11f0e80a48558c8f77885eb0445213b8e69a6a0d7c89fc6ae4",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
    ],
    tag = "nonroot",
)
oci.pull(
    name = "distroless_static_debian12_debug",
    digest = "sha256:0eb1b021dc83cd103a4f5bec6d5292907b7f649137a200e178aa42d768d93ba2",
    image = "gcr.io/distroless/static-debian12:debug",
    platforms = [
        "linux/amd64",
    ],
)

# to generate the lines below, run `bazel mod tidy`
use_repo(
    oci,
    "distroless_static_debian12",
    "distroless_static_debian12_debug",
    "distroless_static_debian12_debug_linux_amd64",
    "distroless_static_debian12_linux_amd64",
)
