load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-app_lib",
    srcs = [
        "authz_adapter.go",
        "main.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-app",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-app/config",
        "//cocotola-auth/domain",
        "//cocotola-auth/domain/rbac",
        "//cocotola-auth/initialize",
        "//cocotola-lib/controller",
        "//cocotola-lib/controller/handler",
        "//cocotola-lib/gateway",
        "//cocotola-lib/logging",
        "//cocotola-lib/process",
        "//cocotola-question/domain",
        "//cocotola-question/initialize",
    ],
)

go_binary(
    name = "cocotola-app",
    embed = [":cocotola-app_lib"],
    visibility = ["//visibility:public"],
)
