load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-auth",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/controller/handler/auth",
        "//cocotola-auth/controller/middleware",
        "//cocotola-auth/domain",
        "//cocotola-auth/gateway",
        "//cocotola-auth/usecase/auth",
        "//cocotola-auth/usecase/event",
        "//cocotola-lib/controller",
        "//cocotola-lib/controller/handler",
        "//cocotola-lib/gateway",
        "//cocotola-lib/logging",
        "//cocotola-lib/process",
        "@com_github_golang_jwt_jwt_v5//:jwt",
    ],
)

go_binary(
    name = "cocotola-auth",
    embed = [":cocotola-auth_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-auth"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-auth"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-auth:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-central1-docker.pkg.dev/mocoarow-cocotola/cocotola-auth/cocotola-auth",
)
