load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-init_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-init",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-init/config",
        "//cocotola-init/initialize",
        "//cocotola-lib/gateway",
    ],
)

go_binary(
    name = "cocotola-init",
    embed = [":cocotola-init_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-init"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-init"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-init:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-central1-docker.pkg.dev/mocoarow-cocotola/cocotola-init/cocotola-init",
)
