load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = ["config.yml"],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-app/config",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-lib/controller",
        "//cocotola-lib/gateway",
        "//cocotola-question/config",
        "@com_github_go_playground_validator_v10//:validator",
        "@in_yaml_go_yaml_v4//:yaml",
    ],
)
