load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "access_token.go",
        "active_group_list.go",
        "active_user_list.go",
        "app_user.go",
        "authorization.go",
        "const.go",
        "doc.go",
        "error.go",
        "event.go",
        "group.go",
        "group_child_groups.go",
        "group_hierarchy.go",
        "group_users.go",
        "guest.go",
        "int_id_set.go",
        "organization.go",
        "password_hasher.go",
        "refresh_token.go",
        "session_token.go",
        "token_generator.go",
        "token_whitelist.go",
        "validator.go",
        "value_objects.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-auth/domain",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_playground_validator_v10//:validator"],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "access_token_s_test.go",
        "active_group_list_s_test.go",
        "active_user_list_s_test.go",
        "app_user_s_test.go",
        "authorization_s_test.go",
        "group_child_groups_s_test.go",
        "group_hierarchy_s_test.go",
        "group_s_test.go",
        "group_users_s_test.go",
        "organization_s_test.go",
        "password_hasher_s_test.go",
        "refresh_token_s_test.go",
        "session_token_s_test.go",
        "token_generator_s_test.go",
        "token_whitelist_s_test.go",
        "value_objects_s_test.go",
    ],
    deps = [
        ":domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
