load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "active_group_list.go",
        "active_list_base.go",
        "active_user_list.go",
        "const.go",
        "doc.go",
        "error.go",
        "event.go",
        "organization.go",
        "validator.go",
        "value_objects.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-auth/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain/internal/idset",
        "@com_github_go_playground_validator_v10//:validator",
    ],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "active_group_list_s_test.go",
        "active_user_list_s_test.go",
        "organization_s_test.go",
        "value_objects_s_test.go",
    ],
    deps = [
        ":domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
