load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "gateway",
    srcs = [
        "access_token_repository.go",
        "active_list_repository.go",
        "app_user_repository.go",
        "auth.go",
        "bcrypt_hasher.go",
        "casbin_authorization_checker.go",
        "doc.go",
        "event_bus.go",
        "gorm_helper.go",
        "group_hierarchy_repository.go",
        "group_repository.go",
        "group_users_repository.go",
        "guest_authenticator.go",
        "opaque_token_repository.go",
        "organization_repository.go",
        "rbac_repository.go",
        "token_cache.go",
        "token_whitelist_repository.go",
        "user_authenticator.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-auth/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-auth/service/auth",
        "//cocotola-lib/process",
        "@com_github_casbin_casbin_v3//:casbin",
        "@com_github_casbin_casbin_v3//model",
        "@com_github_casbin_gorm_adapter_v3//:gorm-adapter",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_crypto//bcrypt",
    ],
)

smart_go_test(
    name = "gateway_test",
    srcs = [
        "active_group_list_repository_m_test.go",
        "active_user_list_repository_m_test.go",
        "app_user_repository_m_test.go",
        "auth_test.go",
        "event_bus_s_test.go",
        "export_test.go",
        "gateway_m_test.go",
        "group_hierarchy_repository_m_test.go",
        "group_repository_m_test.go",
        "group_users_repository_m_test.go",
        "helper_m_test.go",
        "organization_repository_m_test.go",
        "rbac_repository_m_test.go",
        "repository_s_test.go",
    ],
    embed = [":gateway"],
    deps = [
        "//cocotola-auth/domain",
        "//cocotola-lib/gateway",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_gorm_gorm//:gorm",
    ],
)
