load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = ["config.yml"],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-init/config",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-lib/domain",
        "//cocotola-lib/gateway",
        "@in_yaml_go_yaml_v4//:yaml",
    ],
)
