load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "controller",
    srcs = [
        "config.go",
        "context.go",
        "cors.go",
        "doc.go",
        "metrics_server.go",
        "stringutil.go",
        "web_server.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-lib/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-lib/logging",
        "//cocotola-lib/process",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

smart_go_test(
    name = "controller_test",
    srcs = [
        "cors_s_test.go",
        "metrics_server_s_test.go",
        "stringutil_s_test.go",
        "web_server_s_test.go",
    ],
    deps = [":controller"],
)
