load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "const.go",
        "validator.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-lib/domain",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_playground_validator_v10//:validator",
    ],
)
