load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "process",
    srcs = [
        "doc.go",
        "multiprocess.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-lib/process",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_sync//errgroup"],
)

smart_go_test(
    name = "process_test",
    srcs = ["multiprocess_s_test.go"],
    deps = [":process"],
)
