load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "telemetry",
    srcs = [
        "doc.go",
        "telemetry.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-lib/telemetry",
    visibility = ["//visibility:public"],
    deps = ["@io_opentelemetry_go_otel//baggage"],
)

smart_go_test(
    name = "telemetry_test",
    srcs = ["telemetry_s_test.go"],
    deps = [
        ":telemetry",
        "@io_opentelemetry_go_otel//baggage",
    ],
)
