load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "domain",
    srcs = [
        "active_question_list.go",
        "const.go",
        "doc.go",
        "error.go",
        "owned_workbook_list.go",
        "rbac.go",
        "validator.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-question/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-lib/domain/idset",
        "@com_github_go_playground_validator_v10//:validator",
    ],
)

smart_go_test(
    name = "domain_test",
    srcs = [
        "owned_workbook_list_s_test.go",
        "rbac_s_test.go",
    ],
    deps = [
        ":domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
