load("@rules_go//go:def.bzl", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "middleware",
    srcs = [
        "auth_middleware.go",
        "doc.go",
        "trace.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.26/cocotola-auth/controller/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/controller",
        "//cocotola-auth/domain",
        "//cocotola-auth/service/auth",
        "//cocotola-lib/logging",
        "//cocotola-lib/telemetry",
        "@com_github_gin_gonic_gin//:gin",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

smart_go_test(
    name = "middleware_test",
    srcs = [
        "auth_middleware_test.go",
        "mocks_test.go",
    ],
    deps = [
        ":middleware",
        "//cocotola-auth/controller",
        "//cocotola-auth/service/auth",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
